--- a/PhraseChase/Info.plist
+++ b/PhraseChase/Info.plist
@@ -25,6 +25,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>VarelaRound-Regular.ttf</string>
+		<string>LilitaOne-Regular.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
